tests/miniJava/pos/000705_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( ( 0 ) ) java = 0 ; else java = 0 ; } }
