tests/miniJava/neg/004263_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { extends int [] java ( ) { return 0 ; } }
